--- a/test.html
+++ b/test.html
@@ -35,63 +35,63 @@
                                             <td>
                                                 <table>
                                                     <tr>
-                                                        <td>Skin</td>
+                                                        <td><kbd>Skin</kbd></td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Tail</td>
+                                                        <td><kbd>Tail</kbd></td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Head</td>
+                                                        <td><kbd>Head</kbd></td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Legs</td>
+                                                        <td><kbd>Legs</kbd></td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Feet</td>
+                                                        <td><kbd>Feet</kbd></td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Eye</td>
+                                                        <td><kbd>Eye</kbd></td>
                                                         <td>
                                                             <table>
                                                                 <tr>
-                                                                    <td>Amount</td>
+                                                                    <td><kbd>Amount</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Type</td>
+                                                                    <td><kbd>Type</kbd></td>
                                                                 </tr>
                                                             </table>
                                                         </td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Weapon</td>
+                                                        <td><kbd>Weapon</kbd></td>
                                                     </tr>
                                                     <tr>
-                                                        <td>Element</td>
+                                                        <td><kbd>Element</kbd></td>
                                                         <td>
                                                             <table>
                                                                 <tr>
-                                                                    <td>Earth</td>
+                                                                    <td><kbd>Earth</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Fire</td>
+                                                                    <td><kbd>Fire</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Water</td>
+                                                                    <td><kbd>Water</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Air</td>
+                                                                    <td><kbd>Air</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Lightning</td>
+                                                                    <td><kbd>Lightning</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Light</td>
+                                                                    <td><kbd>Light</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Dark</td>
+                                                                    <td><kbd>Dark</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Toxic</td>
+                                                                    <td><kbd>Toxic</kbd></td>
                                                                 </tr>
                                                             </table>
                                                         </td>
@@ -101,16 +101,16 @@
                                                         <td>
                                                             <table>
                                                                 <tr>
-                                                                    <td>Breath</td>
+                                                                    <td><kbd>Breath</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Tail</td>
+                                                                    <td><kbd>Tail</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Teeth</td>
+                                                                    <td><kbd>Teeth</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Claws</td>
+                                                                    <td><kbd>Claws</kbd></td>
                                                                 </tr>
                                                             </table>
                                                         </td>
@@ -175,19 +175,19 @@
                                                         <td>
                                                             <table>
                                                                 <tr>
-                                                                    <td>Money</td>
+                                                                    <td><kbd>Money</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Eggs</td>
+                                                                    <td><kbd>Eggs</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Boosts</td>
+                                                                    <td><kbd>Boosts</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Discounts</td>
+                                                                    <td><kbd>Discounts</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Etc.</td>
+                                                                    <td><kbd>Etc.</kbd></td>
                                                                 </tr>
                                                             </table>
                                                         </td>
@@ -235,22 +235,22 @@
                                             <td>
                                                 <table>
                                                     <tr>
-                                                        <td>I</td>
+                                                        <td><kbd>I</kbd></td>
                                                     </tr>
                                                     <tr>
-                                                        <td>II</td>
+                                                        <td><kbd>II</kbd></td>
                                                     </tr>
                                                     <tr>
-                                                        <td>III</td>
+                                                        <td><kbd>III</kbd></td>
                                                     </tr>
                                                     <tr>
-                                                        <td>IV</td>
+                                                        <td><kbd>IV</kbd></td>
                                                     </tr>
                                                     <tr>
-                                                        <td>V</td>
+                                                        <td><kbd>V</kbd></td>
                                                     </tr>
                                                     <tr>
-                                                        <td>VI</td>
+                                                        <td><kbd>VI</kbd></td>
                                                     </tr>
                                                 </table>
                                             </td>
@@ -264,22 +264,22 @@
                                                         <td>
                                                             <table>
                                                                 <tr>
-                                                                    <td>Common</td>
+                                                                    <td><kbd>Common</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Uncommon</td>
+                                                                    <td><kbd>Uncommon</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Rare</td>
+                                                                    <td><kbd>Rare</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Legendary</td>
+                                                                    <td><kbd>Legendary</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Mythical</td>
+                                                                    <td><kbd>Mythical</kbd></td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td>Deific</td>
+                                                                    <td><kbd>Deific</kbd></td>
                                                                 </tr>
                                                             </table>
                                                         </td>
