--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<table>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css@5.8.1/github-markdown-dark.css">
+<style>
+    body {
+        background-color: #0D1117;
+        color: #fff;
+    }
+    table, tr, td {
+        text-align: center;
+    }
+</style>
+<table class="markdown-body">
     <tr>
         <td>Hybrid Breeder</td>
         <td>
