--- a/chord.html
+++ b/chord.html
@@ -9,6 +9,7 @@
             display: flex;
             justify-content: center;
             padding-top: 50px;
+            background-color: #fff;
         }
 
         text {
