--- a/chord.html
+++ b/chord.html
@@ -147,7 +147,7 @@
                 [outgoing - incoming, "normal", "italic", 10]
             ];
             tspanData.forEach(item => {
-                tspanFormat(item[0], item[1], item[2]);
+                tspanFormat(item[0], item[1], item[2], item[3]);
             });
             labelEl.style.fontSize = '3em';
             svg.appendChild(labelEl);
