--- a/chord.html
+++ b/chord.html
@@ -121,14 +121,18 @@
                 labelEl.setAttribute("text-anchor", x < centerX ? "end" : "start");
             }
             // Create tspan elements for the label details
-            function tspanFormat(text = '', weight = 'normal', style = 'normal', dy = 0) {
-                const item = document.createElementNS("http://www.w3.org/2000/svg", "tspan");
-                item.textContent = text;
-                item.setAttribute("font-weight", weight);
-                item.setAttribute("font-style", style);
-                item.setAttribute("data-point", i);
-                labelEl.appendChild(item);
-            }
+            function tspanFormat(text = '', weight = 'normal', style = 'normal', dy = '0', size = null, fill = null) {
+    const item = document.createElementNS("http://www.w3.org/2000/svg", "tspan");
+    item.textContent = text;
+    item.setAttribute("font-weight", weight);
+    item.setAttribute("font-style", style);
+    item.setAttribute("dy", dy); // vertical shift — use "1.2em" or similar to move to next line
+    if (size) item.setAttribute("font-size", size);
+    if (fill) item.setAttribute("fill", fill);
+    item.setAttribute("x", labelEl.getAttribute("x")); // reset x so it doesn't indent
+    item.setAttribute("data-point", i);
+    labelEl.appendChild(item);
+}
             const connectList = [];
             connections.forEach(connection => {
                 if (connection[0] === i && !connectList.includes(connection[1])) {
@@ -143,7 +147,7 @@
             const tspanData = [
                 [label, "bold", 'normal'],
                 [" | ", "normal", "normal"],
-                [outgoing - incoming, "normal", "italic"]
+                [outgoing - incoming, "normal", "italic", "1em"]
             ];
             tspanData.forEach(item => {
                 tspanFormat(item[0], item[1], item[2]);
